@@ -1,18 +1,18 @@
 package org.example.post.service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.example.image.storage.core.StorageType;
 import org.example.image.storageManager.common.StorageSaveResult;
 import org.example.image.storageManager.imageStorageManager.ImageStorageManager;
-import org.example.post.common.PostMapper;
+import org.example.post.domain.dto.PaginationDto;
 import org.example.post.domain.dto.PostDto;
-import org.example.post.domain.dto.request.PaginationRequestDto;
-import org.example.post.domain.dto.response.PaginationResponseDto;
-import org.example.post.domain.dto.response.PostResponseDto;
+import org.example.post.domain.entity.HashtagEntity;
 import org.example.post.domain.entity.PostEntity;
 import org.example.post.domain.enums.PostStatus;
+import org.example.post.repository.HashtagRepository;
 import org.example.post.repository.PostRepository;
 import org.example.user.domain.entity.member.UserEntity;
 import org.example.user.repository.member.UserRepository;
@@ -20,8 +20,6 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -34,28 +32,13 @@ public class PostService {
 
 	private final PostRepository postRepository;
 	private final UserRepository userRepository;
+	private final HashtagRepository hashtagRepository;
 	private final ImageStorageManager imageStorageManager;
-	// @Transactional
-	// public PostResponseDto createPost(PostRequestDto postDto, String name) {
-	// 	UserEntity user = userRepository.findByUsername(name)
-	// 		.orElseThrow(() -> new IllegalArgumentException("User not found"));
-	//
-	// 	PostEntity postEntity = new PostEntity(    // TODO: getImageFile(url, image 분리 필요)
-	// 		user,
-	// 		postDto.getPostContent(),
-	// 		postDto.getImageFile().toString(),
-	// 		0, // Initialize likeCount
-	// 		PostStatus.PUBLISHED, // Set default status
-	// 		postDto.convertStringsToHashtags(postDto.getHashtagContents())
-	// 	);
-	//
-	// 	PostEntity savedPost = postRepository.save(postEntity);
-	// 	return PostMapper.toDto(savedPost);
-	// }
 
 	@Transactional
 	public PostDto.CreatePostDtoResponse createPost(PostDto.CreatePostDtoRequest postDto,
-		String name, MultipartFile image) {
+		String name, MultipartFile image
+	) {
 		UserEntity user = userRepository.findByUsername(name)
 			.orElseThrow(() -> new IllegalArgumentException("User not found"));
 
@@ -66,24 +49,41 @@ public class PostService {
 			user,
 			postDto.postContent(),
 			storageSaveResult.resourceLocationId(),
-			0, // Initialize likeCount
-			PostStatus.PUBLISHED
+			new ArrayList<>()
 		);
 
 		PostEntity savedPost = postRepository.save(postEntity);
+
+		// hashtagContents split by "#" and save postId and hashtagContent to HashtagEntity
+		List<HashtagEntity> hashtags = new ArrayList<>();
+		for (String hashtagString : postDto.convertHashtagContents(postDto.hashtagContents(), "#")) {
+			HashtagEntity savedHashtag = new HashtagEntity(postEntity, hashtagString);
+			hashtags.add(savedHashtag);
+			hashtagRepository.save(savedHashtag);
+		}
+		// PostEntity에 HashtagEntity 리스트 설정
+		postEntity.setHashtags(hashtags);
+
+		postRepository.save(postEntity);
+
 		return PostDto.CreatePostDtoResponse.toDto(savedPost);
 	}
 
-	public ResponseEntity<PaginationResponseDto> getAllPostsOrderedBySortStrategy(
-		PaginationRequestDto paginationRequestDto) {
+	public PaginationDto.PaginationDtoResponse getAllPostsOrderedBySortStrategy(
+		PaginationDto.PaginationDtoRequest paginationRequestDto
+	) {
 
 		// get information for pagination by DTO
-		int page = paginationRequestDto.getPage();
-		int size = paginationRequestDto.getSize();
-		List<String> hashtagList = paginationRequestDto.getSearchHashtagList();
-		String searchString = paginationRequestDto.getSearchString();
-		String direction = paginationRequestDto.getSortDirection();
-		String field = paginationRequestDto.getSortField();
+		int page = paginationRequestDto.page();
+		int size = paginationRequestDto.size();
+		String searchString = paginationRequestDto.searchString();
+		String direction = paginationRequestDto.sortDirection();
+		String field = paginationRequestDto.sortField();
+		List<String> searchHashtagList = new ArrayList<>();
+		if(paginationRequestDto.searchHashtagList() != null){
+			searchHashtagList = paginationRequestDto.convertHashtagContents(
+				paginationRequestDto.searchHashtagList(), "#");
+		}
 
 		// sort by field ordered by descending
 		Sort sort = Sort.by(field).descending();
@@ -103,58 +103,54 @@ public class PostService {
 		// search posts containing searchString(post content)
 		// searchString not null
 		if (searchString != null && !searchString.isBlank()) {
-			postPage = postRepository.findAllByPostContentContainingAndPostStatus(searchString, PostStatus.PUBLISHED,
-				pageable);
+			postPage = postRepository.findAllByPostContentContainingAndPostStatus(
+				searchString, PostStatus.PUBLISHED, pageable
+			);
 		}
 
 		// search posts containing hashtag content
 		// hashtagList not null
-		if (hashtagList != null && !hashtagList.isEmpty()) {
-			postPage = postRepository.findAllByHashtagsContainingAndPostStatus(hashtagList, PostStatus.PUBLISHED,
-				pageable);
+		if (searchHashtagList != null && !searchHashtagList.isEmpty()) {
+			postPage = postRepository.findAllByPostStatusAndHashtags_HashtagContentIn(
+				PostStatus.PUBLISHED, searchHashtagList, pageable
+			);
 		}
 
 		// search posts containing both searchString and hashtag content
 		// get only some posts which must have both elements
-		if (hashtagList != null && searchString != null && !hashtagList.isEmpty() && !searchString.isBlank()) {
-			postPage = postRepository.findAllByPostContentContainingAndHashtagsContainingAndPostStatus(searchString,
-				hashtagList, PostStatus.PUBLISHED, pageable);
+		if (searchHashtagList != null && searchString != null && !searchHashtagList.isEmpty()
+			&& !searchString.isBlank()) {
+			postPage = postRepository.findAllByPostContentContainingAndHashtags_HashtagContentInAndPostStatus(
+				searchString, searchHashtagList, PostStatus.PUBLISHED, pageable
+			);
 		}
 
 		// find no post about search condition
-		// TODO: 수정 예정
 		if (postPage == null) {
 			throw new NullPointerException("No posts found");
 		}
 
 		// DTO for return data
-		PaginationResponseDto paginationResponseDto = new PaginationResponseDto();
-		paginationResponseDto.setPage(page);
-		paginationResponseDto.setSize(size);
-		paginationResponseDto.setTotalElements(postPage.getTotalElements());
-		paginationResponseDto.setTotalPages(postPage.getTotalPages());
+		PaginationDto.PaginationDtoResponse paginationResponseDto = new PaginationDto.PaginationDtoResponse(
+			page,
+			size,
+			postPage.getTotalElements(),
+			postPage.getTotalPages(),
+			searchString,
+			null
+		);
 
-		paginationResponseDto.setPostResponseDtoList(postPage.stream()
-			.map(postEntity -> {
-				PostResponseDto postResponseDto = new PostResponseDto();
-				postResponseDto.setPostId(postEntity.getPostId());
-				postResponseDto.setPostContent(postEntity.getPostContent());
-				postResponseDto.setLikeCount(postEntity.getLikeCount());
-				postResponseDto.setHashtagContents(postEntity.getHashtagContents());
-				return postResponseDto;
-			}).collect(Collectors.toList()));
-
-		return ResponseEntity.status(HttpStatus.OK)
-			.body(paginationResponseDto);
+		List<PostDto.GetPostDtoResponse> postResponseDtos = postPage.stream()
+			.map(PostDto.GetPostDtoResponse::toDto).toList();
+		return paginationResponseDto.withAdditionalPosts(postResponseDtos);
 	}
 
-	public ResponseEntity<PostResponseDto> getPostById(Long postId) {
-		PostEntity post = postRepository.findById(postId)
+	public PostDto.GetPostDtoResponse getPostById(Long postId) {
+		PostEntity postEntity = postRepository.findById(postId)
 			.orElseThrow(() -> new IllegalArgumentException("게시글이 존재하지 않습니다")); //TODO : custom 예외처리로 리팩토링 필요
 
-		PostResponseDto postResponseDto = PostMapper.toDto(post);
+		return PostDto.GetPostDtoResponse.toDto(postEntity);
 
-		return ResponseEntity.status(HttpStatus.OK).body(postResponseDto);
 	}
 
 }
